[Bug:3464]Added title of some pages in gnome-mpv
Change-Id: I1e2e93df6f0ce18b25df0fa11f7956c4118bfb10

--- a/resources/gooroom-help-gnome-mpv/fullscreen.html
+++ b/resources/gooroom-help-gnome-mpv/fullscreen.html
@@ -20,12 +20,12 @@
 
     <!-- header -->
     <header><a name="top"></a></header>
-     
-   <!-- for align 30px -->
-   <div class ="div_root">
+
+    <!-- for align 30px -->
+    <div class ="div_root">
 
     <!--TiTle -->
-    <font class="font title"></font><br>
+    <font class="font title">전체화면 전환</font><br>
     <font class="font text"></font><br>
 
     <!--sub title-->
