--- a/resources/gooroom-help-gnome-mpv/open.html
+++ b/resources/gooroom-help-gnome-mpv/open.html
@@ -15,14 +15,18 @@
       <li><img class="img" src="grey.svg">
       <li><a href="#top">동영상 열기</a>
     </ul>
-  </nav> 
+  </nav>
   <!--end of navbar-->
 
   <!-- header -->
   <header><a name="top"></a></header>
-  
+
   <!-- for align 30px -->
   <div class="div_root">
+
+    <!--TiTle -->
+    <font class="font title">동영상 열기</font><br>
+    <font class="font text"></font><br>
 
     <div class="small_rec left">
       <font class="font text">
