[Bug:3440]Fixed typo in gooroom-update
Change-Id: I84482f27ea9fd490dc01c02e45ac33794c7682f2

--- a/resources/gooroom-help-gooroom-update/preferences.html
+++ b/resources/gooroom-help-gooroom-update/preferences.html
@@ -11,7 +11,7 @@
         <li><img class="img" src="help.svg">
         <li><a href="index#top">업데이트 관리자</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="#top">설정</a>
+        <li><a href="#top">편집</a>
       </ul>
     </nav>
     <!--end of navbar-->
@@ -19,15 +19,12 @@
     <!-- header -->
     <header><a name="top"></a></header>
      
-   <!-- for align 30px -->
+    <!-- for align 30px -->
    <div class ="div_root">
 
-    <!--pref-->
-    <a name="pref"></a>
-    <br><br><br>
-
     <!-- sub title-->
-    <font class= "font sub_title">설정</font><br>
+    <font class= "font sub_title">편집</font><br>
+
     <!-- small box -->
     <div class="small_rec" style="width:100%; height: fit-content;">
       <font class="font text">
@@ -81,7 +78,7 @@
 
   <footer>
   <font class ="font" style="font-size:14px;line-height:2;"><B>자세한 정보</B><br>
-    <a href="index">설정</a><br>
+    <a href="index">업데이트 관리자</a><br>
   </font><br><br>
   </footer>
   <footer class="info">
