[Bug:3433]Enlarged image size in nimf-settings
Change-Id: Ifad76f872ba8be215d8061ed22161177990225fe

--- a/resources/gooroom-help-nimf-settings/xkb-options.html
+++ b/resources/gooroom-help-nimf-settings/xkb-options.html
@@ -32,12 +32,12 @@
     <div class="Rectangle">
       <font class ="font" style="font-size:14px;">
         <pre><b>사용 예시</b>
-          
+
 한/영 키, 한자 키가 있는 한글 키보드를 사용하시는 경우 특별한 설정없이 사용하실 수 있습니다.
 그러나 노트북 키보드나 외산 키보드의 경우, 오른쪽 Alt 키에 한/영을  오른쪽 Ctrl 키에 한자를 인쇄해 놓은 경우가 많습니다.
 
 이러한 키보드의 경우 키 설정을 해야 합니다.
-<img class="img" src="xkb-options.png" style="width: 40%;"><br>
+<img class="img" src="xkb-options.png"><br>
 다음과 같이 XKB 옵션 메뉴에 한국어 한/영, 한자 키에서 오른쪽 Alt 키를 한/영, 오른쪽 Ctrl 키를 한자 키로 항목을 선택할 수 있습니다.
 </pre></font>
         </div>
