[Bug:3427]Added anchor in nautilus-behavior.html
Change-Id: Idfc85a171ac9c85c2b191badb870d03abcfe5e3d

--- a/resources/gooroom-help-nemo/nautilus-behavior.html
+++ b/resources/gooroom-help-nemo/nautilus-behavior.html
@@ -50,6 +50,7 @@
     <!--sub title-->
     <font class="font sub_title">실행 가능한 텍스트 파일 동작</font><br>
 
+    <a name="executable"></a>
     <!-- Rectangle-->
     <div class="Rectangle">
         <font class="font" style="font-size:14px;">
