[Bug:3422,3423]Fixed typo in nemo
Change-Id: I5feef1998709bb40580df84b33a3fafaaba0d92f

--- a/resources/gooroom-help-nemo/files-sort.html
+++ b/resources/gooroom-help-nemo/files-sort.html
@@ -62,14 +62,13 @@
       <br><br><br>
       <!--sub title-->
       <font class="font sub_title">촘촘히 보기</font><br>
-  
+
       <!-- small box -->
       <div class="small_rec" style="width:100%; height: fit-content;">
           <font class="font" style="font-size:14px;">
-            <pre>파일 정렬 방법을 변경하려면 파일 관리자에서 열 제목 중 하나를 클릭합니다. 예를 들어 [유형]을 클릭하여 파일 유형별로 정렬합니다. 열 제목을 한번 더 클릭하면 역순으로 정렬됩니다.
-  
-더 많은 속성 열을 표시하고 해당 열을 기준으로 정렬할 수도 있습니다. 도구 모음에서 [표시할 열(V)…] 을 클릭한 다음 표시할 열을 선택합니다. 사용 가능한 열에 대한 설명은 <a href="nautilus-list">파일 목록 열 환경 설정</a>을 참조합니다.</pre>
+            <pre>촘촘히 보기를 선택하면 해당 위치에 있는 폴더와 파일들이 작은 아이콘과 제목으로만 표시됩니다.</pre>
       </div>
+
         <!-- end of small box-->
 
     <!-- ways -->
@@ -77,7 +76,7 @@
 
      <!--sub title-->
      <font class="font sub_title">파일 정렬 방법</font><br>
- 
+
      <!-- Rectangle-->
      <div class="Rectangle">
        <font class="font" style="font-size:14px;">
@@ -85,18 +84,18 @@
          <div class="discription">
            <pre>파일 이름을 기준으로 알파벳순으로 정렬합니다.</pre>
          </div><br>
- 
+
          <pre><b>크기</b></pre>
          <div class="discription">
            <pre>파일 크기(디스크가 차지하는 공간)를 기준으로 정렬합니다. 기본적으로 파일 크기가 작은 항목부터 오름차순으로 정렬합니다.</pre>
          </div><br>
- 
-         <pre><b>유형</b></pre>
+
+         <pre><b>형식</b></pre>
          <div class="discription">
-           <pre>파일 유형을 기준으로 알파벳순으로 정렬합니다. 같은 유형의 파일은 함께 그룹화되고 이름별로 정렬합니다.</pre>
+           <pre>파일 형식을 기준으로 알파벳순으로 정렬합니다. 같은 형식의 파일은 함께 그룹화되고 이름별로 정렬합니다.</pre>
          </div><br>
-          
-         <pre><b>마지막 수정</b></pre>
+
+         <pre><b>수정한 날짜</b></pre>
          <div class="discription">
            <pre>파일이 마지막으로 변경된 날짜 및 시간을 기준으로 정렬합니다. 기본적으로 오래된 항목부터 최신 항목 순서로 정렬합니다.</pre>
          </div><br>
@@ -110,7 +109,7 @@
     <font class="font" style="font-size:14px;line-height:2;"><B>자세한 정보</B><br>
     <a href="index#common_task">일반적인 작업</a></font> <br><br>
   </footer>
-  
+
   <footer class="info">
     <a onclick="showMore('name')"
     class="Options none" onMouseOver="this.className='OptionsOnMouse';"
