[Bug:3466,3467]Added network connection add page and Fixed typo
Change-Id: I99d2dff08787cf20acb329165fb534da306abf9b

--- a/resources/gooroom-help-network/prefs-connection.html
+++ b/resources/gooroom-help-network/prefs-connection.html
@@ -41,9 +41,9 @@
 
       <div class="small_rec right">
         <font class="font text">
-          <pre><a href="look-background">네트워크 추가</a>
+          <pre><a href="connection-add">네트워크 추가</a>
 
-새로 네트워크를 추가할 수 있습니다.
+새로운 네트워크를 추가할 수 있습니다.
           </pre>
         </font>
         
