[Bug:3482]Fixed mal-linked hypertext
Change-Id: I5b82e2c7ff7b9232e117472efbffe46ff724fbaf

--- a/resources/gooroom-help-calc/scientific.html
+++ b/resources/gooroom-help-calc/scientific.html
@@ -32,7 +32,7 @@
      <!-- Rectangle-->
      <div class="Rectangle">
        <font class="font" style="font-size:14px;">
-         <pre>과학 표기법으로 숫자를 입력하려면 ×10y 단추(<span id='highlight'>Ctrl</span> + <span id='highlight'>E</span>)를 사용합니다. <a href='subscript'>숫자 모드</a>에서는 자동으로 위 첨자로 바꿔줍니다. 2×10¹⁰⁰을 입력하려면 가수부(2)부터 입력합니다.
+         <pre>과학 표기법으로 숫자를 입력하려면 ×10y 단추(<span id='highlight'>Ctrl</span> + <span id='highlight'>E</span>)를 사용합니다. 숫자 모드에서는 자동으로 <a href='subscript'>위 첨자</a>로 바꿔줍니다. 2×10¹⁰⁰을 입력하려면 가수부(2)부터 입력합니다.
 
 <div id='discription'>2</div>
 
