[Bug:3446,3445,3443,3452,3444]Updated gnome control center wifi contents
Change-Id: I45947975e5dbabf066da78ec0c78f71551d3727a

--- a/resources/gnome-control-center/net-wireless-disconnecting.html
+++ b/resources/gnome-control-center/net-wireless-disconnecting.html
@@ -62,7 +62,7 @@
    <footer>
      <font class="font ref">추가 정보</font><br>
      <font class="font text"><a href="net-problem">네트워크 문제</a> — <a class="none" href="net-wireless-troubleshooting">무선 연결 문제 해결 방법</a>, <a class="none" href="net-wireless-find.htlm">목록에서 와이파이를 찾을 수 없음</a></font><br>
-     <font class="font text"><a href="net-wireless">와이파이</a> — <a class="none" href="net-wireless-connect">와이파이에 연결</a> , <a class="none" href="net-wireless-hidden">숨겨진 와이파이에 연결</a>, <a class="none" href="net-wireless-disconnecting">목록에서 와이파이를 찾을 수 없음</a></font>
+     <font class="font text"><a href="net-wireless">와이파이</a> — <a class="none" href="net-wireless-connect">와이파이에 연결</a> , <a class="none" href="net-wireless-hidden">숨겨진 와이파이에 연결</a>, <a class="none" href="net-wireless-disconnecting">와이파이 연결이 계속 끊어지는 이유</a></font>
 
      <br><br>
 
