--- a/resources/gnome-control-center/net-wireless-wepwpa.html
+++ b/resources/gnome-control-center/net-wireless-wepwpa.html
@@ -8,7 +8,7 @@
 
    <!-- header -->
    <header><a name="top"></a></header>
- 
+
    <!--nav bar-->
    <nav class="navbar navbar-fixed-top" style="top:10px;margin:30px;">
      <ul>
@@ -17,7 +17,7 @@
        <li><img class="img" src="grey.svg">
        <li><a href="net-wireless">와이파이</a>
        <li><img class="img" src="grey.svg">
-       <li><a href="#top">와이파이 문제 해결 방법</a>
+       <li><a href="#top">WEP와 WPA 암호화</a>
      </ul>
     </nav> <!--end of navbar-->
    <!-- contents  -->
@@ -26,43 +26,31 @@
    <div class="div_root">
 
      <!--TiTle -->
-     <font class="font title" id="title">와이파이 문제 해결 방법</font><br>
-     <font class="font text">여기에서는 와이파이 문제에 대한 원인을 찾고 문제를 해결하는 데 도움을 줍니다. 와이파이에 연결할 수 없는 경우 다음 방법을 시도해 보세요.</font><br><br>
-
+     <font class="font title" id="title">WEP와 WPA 암호화</font><br>
      <div class="Rectangle">
-       <pre>다음 단계를 수행하여 컴퓨터를 인터넷에 연결합니다.<br>
-<div class="discription">- 초기 검사 수행
-
-- 하드웨어에 대한 정보 수집
-
-- 하드웨어 확인
-
-- 무선 라우터에 대한 연결 생성 시도
-
-- 모뎀 및 라우터 확인 수행</div>
-시작하려면 페이지 오른쪽 위에 있는 [다음] 링크를 클릭하세요. 이 페이지 또는 다른 페이지의 링크를 통해 각각의 단계에 대한 자세한 내용을 확인할 수 있습니다.</pre>
+       <pre>WEP와 WPA(또는 WPA2)는 와이파이 연결을 보호하기 위해 사용되는 암호화 도구의 이름입니다. 암호화는 네트워크 연결을 뒤섞어 사용자가 어떤 페이지를 방문하고 있는지 다른 사람이 알지 못하게 합니다. WEP는 Wired Equivalent Privacy, WPA는 Wireless Protected Access의 줄임말 입니다.
+       
+암호화를 사용하는 것은 암호화를 하지 않는 것보다 안전하긴 하지만 WEP는 네트워크 보안을 보장하는 최소한의 표준이기 때문에 사용자가 원하지 않는 경우 사용하지 않을 수 있습니다. WPA2가 나열된 3가지 표준 중 가장 안전하며, 만약 사용자의 무선 랜카드와 라우터가 WPA2를 지원한다면, 사용자가 와이파이 설정 시 정책 기본값으로 WPA2를 사용하게 됩니다.</pre>
      </div>
-   </div> <!-- end of div_root-->
+
+      <br><br>
+    </div> <!-- end of div_root-->
 
    <footer>
      <font class="font ref">추가 정보</font><br>
-     <font class="font text"><a href="net-wireless">와이파이</a> — <a class="none" href="net-wireless-connect">와이파이에 연결</a>, <a class="none" href="net-wireless-hidden">숨겨진 와이파이에 연결</a>, <a class="none" href="net-wireless-disconnecting">와이파이 연결이 계속 끊어지는 이유</a></font>
+     <font class="font text"><a href="net-wireless">와이파이</a> — <a class="none" href="net-wireless-connect">와이파이에 연결</a> , <a class="none" href="net-wireless-hidden">숨겨진 와이파이에 연결</a>, <a class="none" href="net-wireless-disconnecting">와이파이 연결이 계속 끊어지는 이유</a></font>
 
      <br><br>
 
      <font class="font ref">참고 항목</font><br>
-     <font class="font text"><a href="net-wrongnetwork">컴퓨터가 잘못된 네트워크에 연결됨</a> — 연결 설정을 변경하고 잘못된 연결 옵션을 해제합니다.<br>
-
-<a href="net-wireless-disconnecting">와이파이 연결이 계속 끊어지는 이유</a> — 신호가 약하거나 네트워크가 제대로 연결되지 않았을 수 있습니다.<br>
-
-<a href="net-wireless-troubleshooting">와이파이 문제 해결 방법</a> — 무선 연결 문제를 식별하고 해결합니다.<br><br>
+     <font class="font text"><a href="net-wireless-connect">와이파이에 연결 </a> — 와이파이에 연결<br>
+     <br><br>
      </footer>
 
    <footer class="info">
     <a onClick="showMore('name')"
     class="Options none" onMouseOver="this.className='OptionsOnMouse';"
     onMouseOut="this.className='Options';"><B>정보</B></a><br>
-
     <div id=name style="display:none; width:90%;">
       <table class="font text" style="display:inline-block;" cellspacing="7px" cellpadding="3px">
         <tr>
