[Bug:3449,3454,3453]Updated gnome control center device display contents
Change-Id: I8660a8d01f14c41225452aaf63a2006c2d08309b

--- a/resources/gnome-control-center/background.html
+++ b/resources/gnome-control-center/background.html
@@ -21,13 +21,13 @@
    <div class="div_root">
 
      <!--TiTle -->
-     <font class="font title">배경</font><br>
-     <font class="font text"><pre>배경 메뉴를 이용하여 사용자가 원하는 배경 화면을 지정할 수 있습니다.</pre></font>
+     <font class="font title" id="title">배경</font><br>
+     <font class="font text"><pre>사용자의 바탕 화면 및 잠금 화면의 배경을 변경할 수 있습니다. 구름 운영 체제에서 기본적으로 제공되는 이미지 또는 사용자가 추가한 사진으로 배경을 변경할 수 있습니다. 이 설정은 바탕 화면 및 잠금 화면 배경에만 적용되므로 메뉴 또는 아이콘을 변경하려면 <a href="theme">테마</a>를 참고하세요.</pre></font>
 
      <br><br>
 
      <div class="Rectangle">
-     <pre>배경을 변경하려면 다음의 단계를 수행합니다.
+     <pre>다음 단계를 수행하여 바탕 화면 및 잠금 화면의 배경을 변경할 수 있습니다.
      
 <div class="discription">1. 아래의 4가지 방법 중 하나를 수행하여 [설정] 애플리케이션을 실행합니다.
 <div style="margin:30px;"><pre>- [시작] <img class="img" src="launcher.png" style="background-color:#252525;"> 아이콘 클릭 후 [설정] <img class="img" style="width:24px;" src="control-pannel.png"> 애플리케이션을 선택합니다.
@@ -40,10 +40,9 @@
 2. 왼쪽 영역에서 [배경]을 선택합니다.
 
 3. 현재 배경의 상태를 확인합니다.
-기본 배경 화면을 변경하려면 [배경]을 클릭하고, 잠금 화면 배경을 변경하려면 [화면 잠그기]를 클릭합니다.
+배경 화면과 잠금 화면을 동일하게 적용하려면 배경 화면 적용 타입에서 [모든 화면 동일 적용]을 선택하고, 배경 화면과 잠금 화면을 별도로 적용하려면 [홈 화면과 잠금 화면 별도 적용]을 선택합니다. 배경 화면을 클릭하면 배경 화면에 체크 박스가 생기고, 잠금 화면을 클릭하면 잠금 화면에 체크 박스가 생깁니다. 체크 박스가 생긴 화면이 사용자가 선택한 이미지/색으로 변경됩니다.
 
-4. 배경 변경 화면의 헤더 바에서 [배경 이미지], [사진], [색]과 같은 탭을 선택하여 원하는 배경으로 변경합니다.
-</div>
+4. 배경 화면과 잠금 화면을 이미지/단일 색으로 설정할 수 있습니다. 이미지로 설정하고 싶은 경우 배경 선택에서 [이미지]를 선택 후 원하는 이미지를 선택하거나, [이미지 추가하기]를 눌러 사용자가 원하는 이미지를 추가하여 선택할 수 있습니다. 단일 색으로 설정하고 싶은 경우 [단일 색상]을 선택 후 원하는 색상을 선택하여 변경할 수 있습니다.</div>
 
 구름 바탕 화면의 <a href="../gooroom-help-eog/wall_paper">배경은 [이미지 뷰어] 애플리케이션을 통해서도 변경</a>할 수 있습니다.</pre>
      </div>
