--- a/resources/gnome-control-center/display-night-light.html
+++ b/resources/gnome-control-center/display-night-light.html
@@ -17,7 +17,7 @@
         <li><img class="img" src="grey.svg">
         <li><a href="prefs-display#top">디스플레이</a>
         <li><img class="img" src="grey.svg">
-        </li><li><a href="#top">화면 색 온도 조절</a>
+        </li><li><a href="#top">야간 모드 설정</a>
       </ul>
     </nav>
     <!--end of navbar-->
@@ -28,7 +28,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">야간 모드 설정</font><br>
+      <font class="font title" id="title">야간 모드 설정</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
