--- a/resources/gnome-control-center/look-background.html
+++ b/resources/gnome-control-center/look-background.html
@@ -28,7 +28,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">바탕 화면 및 잠금 화면 배경 설정</font><br>
+      <font class="font title" id="title">바탕 화면 및 잠금 화면 배경 설정</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
