--- a/resources/gnome-control-center/look-resolution-orientation.html
+++ b/resources/gnome-control-center/look-resolution-orientation.html
@@ -30,7 +30,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">방향</font><br>
+      <font class="font title" id="title">방향</font><br>
 
       <!-- Rectangle-->
       <div class="Rectangle">
