--- a/resources/gnome-control-center/look-resolution.html
+++ b/resources/gnome-control-center/look-resolution.html
@@ -62,7 +62,7 @@
         <font class="font text">
           <pre><a href="look-resolution-refresh-rate">주사율</a>
 
-사용자의 화면 주사율을 설정합니다. 화면 주사율은 전송된 화면 이미지를 그리거나 업데이트하는 주기를 뜻하며 이 수치가 높을수록 주기가 짧아져 더 매끄러운 화면을 확인할 수 있습니다.
+사용자의 화면 주사율을 설정합니다. 화면 주사율은 전송된 화면 이미지를 그리거나 업데이트하는 주기를 뜻합니다.
           </pre>
         </font>
 
@@ -86,7 +86,6 @@
       <a href="prefs-display">디스플레이</a><br><br>
 
       <font class="font ref">참고 항목</font><br>
-      <a href="look-display-fuzzy">화면이 흐릿한 문제</a></font>
     </footer>
 
     <footer class="info">
