--- a/resources/gnome-control-center/prefs-display.html
+++ b/resources/gnome-control-center/prefs-display.html
@@ -34,7 +34,7 @@
       <!--night light-->
       <div class="small_rec left">
         <font class="font text">
-          <pre><a href="display-night-light">화면 색 온도 조절</a>
+          <pre><a href="display-night-light">야간 모드 설정</a>
 
 야간 모드를 설정하여 현재 시간에 따라 사용자의 디스플레이의 색을 변경할 수 있습니다.
           </pre>
@@ -43,7 +43,7 @@
       </div>
 
       <!--background-->
-      <div class="small_rec right">
+      <!--div class="small_rec right">
         <font class="font text">
           <pre><a href="look-background">바탕 화면 및 잠금 화면 배경 변경</a>
 
@@ -51,10 +51,10 @@
           </pre>
         </font>
         
-      </div>
+      </div-->
 
       <!--resolution, orientation...-->
-      <div class="small_rec left">
+      <div class="small_rec right">
         <font class="font text">
           <pre><a href="look-resolution">화면 방향, 해상도 및 주사율 설정</a>
 
@@ -65,9 +65,9 @@
       </div>
 
       <!--double-monitor-->
-      <div class="small_rec right">
+      <div class="small_rec left">
         <font class="font text">
-          <pre><a href="display-dual-monitors">다른 모니터 연결</a>
+          <pre><a href="display-dual-monitors">추가 모니터 연결</a>
 
 추가 모니터를 설정합니다. 2개 이상의 모니터를 컴퓨터에 연결하여 사용하는 경우에 해당합니다.
           </pre>
@@ -76,7 +76,7 @@
       </div>
 
       <!--blank-->        
-      <div class="small_rec left">
+      <!--div class="small_rec left">
         <font class="font text">
           <pre><a href="display-blank">빈 화면 설정</a>
 
@@ -84,7 +84,7 @@
           </pre>
         </font>
         
-      </div>
+      </div-->
 
       <!--resolution>
       <div class="small_rec right">
@@ -98,14 +98,14 @@
       </div-->
 
       <!--screenlock-->        
-      <div class="small_rec right">
+      <!--div class="small_rec right">
         <font class="font text">
           <pre><a href="session-screenlocks">화면 잠금 시간 설정</a>
 
 화면이 잠금 모드로 전환되는 시간을 설정합니다.
           </pre>
         </font>
-      </div>
+      </div-->
     </div>   <!-- end of div_root-->
 
     <footer>
