--- a/resources/gnome-control-center/display-blank.html
+++ b/resources/gnome-control-center/display-blank.html
@@ -14,9 +14,7 @@
         <li><img class="img" src="help.svg">
         <li><a href="index#top">설정</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="prefs-device">장치</a>
-        <li><img class="img" src="grey.svg">
-        <li><a href="prefs-display#top">디스플레이</a>
+        <li><a href="power">전원</a>
         <li><img class="img" src="grey.svg">
         </li><li><a href="#top">빈 화면 설정</a>
       </ul>
@@ -29,7 +27,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">절전 모드 사용</font><br>
+      <font class="font title" id="title">빈 화면 설정</font><br>
 
       <!-- Rectangle-->
       <div class="Rectangle">
@@ -55,13 +53,10 @@
 
     <footer>
       <font class="font ref">추가 정보</font><br>
-      <a href="prefs-display">디스플레이</a><br>
-      <a href="power#saving">전원 절약 설정</a><br>
-      <a href="hardware-problems-graphics">디스플레이 문제</a><br><br>
+      <a href="power#top">전원</a><br><br>
 
       <font class="font ref">참고 항목</font><br>
-      <a href="session-screenlocks">화면 잠금 설정</a><br>
-      <a href="power-whydim">화면이 어두워지는 이유</a></font>
+      <a href="session-screenlocks">화면 잠금 시간 설정</a><font>
     </footer>
     <footer class="info">
       <a onClick="showMore('name')"
