--- a/resources/gnome-control-center/display-dual-monitors.html
+++ b/resources/gnome-control-center/display-dual-monitors.html
@@ -19,7 +19,7 @@
         <li><img class="img" src="grey.svg">
         <li><a href="prefs-display#top">디스플레이</a>
         <li><img class="img" src="grey.svg">
-        </li><li><a href="#top">다른 모니터 연결</a>
+        </li><li><a href="#top">추가 모니터 연결</a>
       </ul>
     </nav>
     <!--end of navbar-->  
@@ -30,7 +30,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">추가 모니터 연결</font><br>
+      <font class="font title" id="title">추가 모니터 연결</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
