--- a/resources/gnome-control-center/look-resolution-refresh-rate.html
+++ b/resources/gnome-control-center/look-resolution-refresh-rate.html
@@ -30,7 +30,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">주사율</font><br>
+      <font class="font title" id="title">주사율</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
