--- a/resources/gnome-control-center/look-resolution-resolution.html
+++ b/resources/gnome-control-center/look-resolution-resolution.html
@@ -28,7 +28,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">해상도</font><br>
+      <font class="font title" id="title">해상도</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
