--- a/resources/gnome-control-center/power-autosuspend.html
+++ b/resources/gnome-control-center/power-autosuspend.html
@@ -18,7 +18,7 @@
         <li><img class="img" src="grey.svg">
         <li><a href="power">전원</a>
         <li><img class="img" src="grey.svg">
-        </li><li><a href="#top">전원 단추 설정</a>
+        </li><li><a href="#top">자동 대기 모드 설정</a>
       </ul>
     </nav>
     <!--end of navbar-->  
@@ -28,14 +28,14 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font title" id="title">전원 단추 설정</font><br>
+      <font class="font title" id="title">자동 대기 모드 설정</font><br>
 
       <!-- Rectangle-->
       <div class="Rectangle">
         <font class="font text">
-          <pre>사용자가 컴퓨터 전원 단추를 눌렀을 때의 실행할 동작을 설정할 수 있습니다. 설정할 수 있는 옵션에는 [대기 모드], [전원 끄기], [최대 절전], [아무 것도 안 함]이 있습니다. [아무 것도 안 함]을 선택한 경우, 컴퓨터 전원 단추를 눌러도 아무 것도 변경되지 않습니다.
+          <pre>사용자가 아무런 입력이 없을 때 컴퓨터가 자동적으로 대기 모드에 들어갈 수 있도록 설정할 수 있습니다. 자동 대기 모드를 설정하는 경우 입력 지연 시간을 최소 15분에서 최대 120분까지 설정할 수 있습니다.
 
-다음 단계를 수행하여 전원 단추 옵션을 설정합니다.
+다음 단계를 수행하여 자동 대기 모드를 설정합니다.
 
 <div class="discription">1. 좌측 하단의 [시작] <img class="img" src="rest.png" style="background-color:#252525"> 아이콘을 클릭하고 검색 창에 "설정"을 입력한 후 [설정] 애플리케이션을 실행합니다.</div>
 
@@ -45,9 +45,9 @@
 <div class="discription">2. [설정] 애플리케이션 사이드 바에서 [전원]을 클릭합니다.</div>
 
           <img class="img border" src="setting_power.jpeg" width="700" height="511"><br>
-          <img class="img border" src="power_click_button.jpeg" width="700" height="459">
+          <img class="img border" src="power_autosuspend.jpeg" width="700" height="459">
 
-<div class="discription">3. [전원 단추를 눌렀을 때] 설정을 변경합니다. [대기 모드], [전원 끄기], [최대 절전], [아무 것도 안 함]이 제공되며 기본적으로 [대기 모드]로 설정되어 있습니다.</div></pre>
+<div class="discription">3. [자동 대기 모드] 설정을 변경합니다. 자동 대기 모드를 설정하는 경우, 자동 대기 모드에 들어가기 위한 입력 지연 시간을 사용자가 최소 15분에서 최대 120분까지 설정할 수 있습니다.</div></pre>
 
         </font>
       </div>  <!-- end of Rectangle-->
