--- a/resources/gnome-control-center/power.html
+++ b/resources/gnome-control-center/power.html
@@ -40,11 +40,22 @@
       </div>
 
       <!--screen-lock-->
-      <div class="small_rec right">
+      <!--div class="small_rec right">
         <font class="font text">
           <pre><a href="privacy-screen-lock">자동 화면 잠금</a>
 
 사용자의 화면 잠금을 설정하여 다른 사람이 컴퓨터에 접근하는 것을 방지합니다.
+          </pre>
+        </font>
+
+      </div-->
+
+      <!--auto-suspend-->        
+      <div class="small_rec right">
+        <font class="font text">
+          <pre><a href="power-autosuspend">자동 대기모드 설정</a>
+
+자동 대기모드를 설정하여 전원을 아낍니다.
           </pre>
         </font>
 
@@ -64,9 +75,7 @@
 
     <footer>
       <font class="font ref">추가 정보</font><br>
-      <a href="index">설정</a><br>
-      <!--a href="hardware">하드웨어 및 드라이브</a><br-->
-      <a href="power-suspend">전원 단추 설정</a>
+      <a href="index">설정</a>
     </footer>
     <footer class="info">
       <a onClick="showMore('name')"
