[Bug:3459,3458,3457,3447]Updated gnome control center device mouse contents
Change-Id: I18958b4b8e40d8a56fab24f0111bff12162fa9e3

--- a/resources/gnome-control-center/mouse-doubleclick.html
+++ b/resources/gnome-control-center/mouse-doubleclick.html
@@ -13,11 +13,9 @@
         <li><img class="img" src="help.svg">
         <li><a href="index#top">설정</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="prefs-device">장치</a>
+        <li><a href="a11y#top">접근성</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="mouse#top">마우스 및 터치패드</a>
-        <li><img class="img" src="grey.svg">
-        <li><a href="mouse#top">마우스 및 터치패드 설정</a>
+        <li><a href="a11y#mobility">이동 지원</a>
         <li><img class="img" src="grey.svg">
         </li><li><a href="#top">마우스 두 번 클릭 속도 설정</a>
       </ul>
@@ -29,7 +27,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">마우스 두 번 클릭 속도 설정</font><br>
+      <font class="font title" id="title">마우스 두 번 클릭 속도 설정</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
