--- a/resources/gnome-control-center/mouse-lefthanded.html
+++ b/resources/gnome-control-center/mouse-lefthanded.html
@@ -17,7 +17,8 @@
         <li><a href="prefs-device">장치</a>
         <li><img class="img" src="grey.svg">
         <li><a href="mouse#top">마우스 및 터치패드</a>
-        <li><img class="img" src="grey.svg">        <li><a href="mouse#top">마우스 및 터치패드 설정</a>
+        <li><img class="img" src="grey.svg">
+        <li><a href="mouse#top">마우스 및 터치패드 설정</a>
         <li><img class="img" src="grey.svg">
         </li><li><a href="#top">마우스 오른쪽 및 왼쪽 단추 설정 변경</a>
       </ul>
@@ -29,7 +30,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">마우스 오른쪽 및 왼쪽 단추 설정 변경</font><br>
+      <font class="font title" id="title">마우스 오른쪽 및 왼쪽 단추 설정 변경</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
