--- a/resources/gnome-control-center/mouse-middleclick.html
+++ b/resources/gnome-control-center/mouse-middleclick.html
@@ -29,7 +29,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">마우스 중간 클릭</font><br>
+      <font class="font title" id="title">마우스 중간 클릭</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
@@ -53,8 +53,7 @@
 
     <footer>
       <font class="font ref">추가 정보</font><br>
-      <a href="mouse#tips">팁</a><br>
-      <a href="tips">팁 및 요령</a>
+      <a href="mouse#tips">팁</a>
     </footer>
     <footer class="info">
       <a onClick="showMore('name')"
