--- a/resources/gnome-control-center/mouse-sensitivity.html
+++ b/resources/gnome-control-center/mouse-sensitivity.html
@@ -31,7 +31,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">마우스 및 터치패드 속도 조정</font><br>
+      <font class="font title" id="title">마우스 및 터치패드 속도 조정</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
