--- a/resources/gnome-control-center/mouse-touchpad-click.html
+++ b/resources/gnome-control-center/mouse-touchpad-click.html
@@ -31,7 +31,7 @@
     <div class="div_root">
 
       <!--Title -->
-      <font class="font title">터치패드 클릭, 드래그, 스크롤 설정</font>
+      <font class="font title" id="title">터치패드 클릭, 드래그, 스크롤 설정</font>
       <font class="font text">
           <pre>별도의 하드웨어 버튼 없이 터치패드에서 탭 또는 제스쳐를 통해 클릭, 두 번 클릭, 드래그, 스크롤과 같은 동작을 수행할 수 있습니다. 터치패드가 지원되는 경우에만 마우스 및 터치패드 설정 옵션을 확인할 수 있습니다.</pre></font>
       <br>
