--- a/resources/gnome-control-center/mouse-mousekeys.html
+++ b/resources/gnome-control-center/mouse-mousekeys.html
@@ -5,21 +5,17 @@
   </head>
 
   <body>
-
     <!-- header -->
     <header><a name="top"></a></header>
-
     <!--nav bar-->
     <nav class="navbar-fixed-top" style="top:10px;margin:30px;">
       <ul>
         <li><img class="img" src="help.svg">
         <li><a href="index#top">설정</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="prefs-device">장치</a>
+        <li><a href="a11y#top">접근성</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="mouse#top">마우스 및 터치패드</a>
-        <li><img class="img" src="grey.svg">
-        <li><a href="mouse#top">마우스 및 터치패드 설정</a>
+        <li><a href="a11y#mobility">이동 지원</a>
         <li><img class="img" src="grey.svg">
         </li><li><a href="#top">마우스 키 설정</a>
       </ul>
@@ -31,7 +27,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">마우스 키 설정</font><br>
+      <font class="font title" id="title">마우스 키 설정</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
