--- a/resources/gnome-control-center/mouse-wakeup.html
+++ b/resources/gnome-control-center/mouse-wakeup.html
@@ -31,7 +31,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">마우스 동작이 지연됨</font><br>
+      <font class="font title" id="title">마우스 동작이 지연됨</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
