[Bug:3456,3455]Updated gnome control center device keyboard contents
Change-Id: Iec8c95e804dd8ce046cd42ad47cf7b00fa0aad22

--- a/resources/gnome-control-center/keyboard-repeat-keys.html
+++ b/resources/gnome-control-center/keyboard-repeat-keys.html
@@ -13,11 +13,9 @@
         <li><img class="img" src="help.svg">
         <li><a href="index#top">설정</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="prefs-device">장치</a>
+        <li><a href="a11y#top">접근성</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="keyboard#top">키보드</a>
-        <li><img class="img" src="grey.svg">
-        <li><a href="keyboard#other_topics">기타 내용</a>
+        <li><a href="a11y#mobility">이동 지원</a>
         <li><img class="img" src="grey.svg">
         </li><li><a href="#top">반복 키 설정</a>
       </ul>
@@ -30,7 +28,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">반복 키 설정</font><br>
+      <font class="font title" id="title">반복 키 설정</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
