--- a/resources/gnome-control-center/keyboard-shortcuts-set.html
+++ b/resources/gnome-control-center/keyboard-shortcuts-set.html
@@ -17,8 +17,6 @@
         <li><img class="img" src="grey.svg">
         <li><a href="keyboard#top">키보드</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="keyboard#other_topics">기타 내용</a>
-        <li><img class="img" src="grey.svg">
         </li><li><a href="#top">바로 가기 키 설정</a>
       </ul>
     </nav>
@@ -30,7 +28,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">바로 가기 키 변경</font><br>
+      <font class="font title" id="title">바로 가기 키 설정</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
