--- a/resources/gnome-control-center/keyboard-nav.html
+++ b/resources/gnome-control-center/keyboard-nav.html
@@ -1,12 +1,11 @@
 <html>
-
   <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
 
   <body>
-<!-- header -->
+    <!-- header -->
     <header><a name="top"></a></header>
     <!--nav bar-->
     <nav class="navbar-fixed-top" style="top:10px;margin:30px;">
@@ -14,11 +13,9 @@
         <li><img class="img" src="help.svg">
         <li><a href="index#top">설정</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="prefs-device">장치</a>
+        <li><a href="a11y#top">접근성</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="keyboard#top">키보드</a>
-        <li><img class="img" src="grey.svg">
-        <li><a href="keyboard#accessibility">접근성</a>
+        <li><a href="a11y#mobility">이동 지원</a>
         <li><img class="img" src="grey.svg">
         </li><li><a href="#top">키보드 탐색</a>
       </ul>
@@ -31,7 +28,7 @@
     <div class="div_root">
 
       <!--title-->
-      <font class="font title">키보드 탐색</font><br>
+      <font class="font title" id="title">키보드 탐색</font><br>
       <font class="font text">
         <pre>마우스 또는 마우스와 유사한 장치를 사용할 수 없거나, 키보드를 많이 사용하는 사용자에게 유용한 키를 설명합니다. 모든 사용자에게 유용한 바로 가기 키를 확인하려면 <a href="shell-keyboard-shortcuts">유용한 바로 가기 키 확인</a> 페이지를 참고하세요.
 
