[Bug:3447,3455,3457]Updated gnome control center device a11y contents
Change-Id: I57b9413f4083c76a9c0501d5d3aa0dfb75f8f522

--- a/resources/gnome-control-center/a11y-bouncekeys.html
+++ b/resources/gnome-control-center/a11y-bouncekeys.html
@@ -15,19 +15,20 @@
         <li><img class="img" src="grey.svg">
         <li><a href="a11y#top">접근성</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="a11y#mobility">이동 문제</a>
+        <li><a href="a11y#mobility">이동 지원</a>
         <li><img class="img" src="grey.svg">
         </li><li><a href="#top">탄력 키 설정</a>
       </ul>
     </nav>
     <!--end of navbar-->
+
     <!-- contents  -->
 
     <!-- for align 30px -->
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">탄력 키 설정</font><br>
+      <font class="font title" id="title">탄력 키 설정</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
