--- a/resources/gnome-control-center/a11y-soundkeys.html
+++ b/resources/gnome-control-center/a11y-soundkeys.html
@@ -27,7 +27,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">키 소리 설정</font><br>
+      <font class="font title" id="title">키 소리 설정</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
