--- a/resources/gnome-control-center/a11y-right-click.html
+++ b/resources/gnome-control-center/a11y-right-click.html
@@ -27,7 +27,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">마우스 오른쪽 단추 누르기 대체</font><br>
+      <font class="font title" id="title">마우스 오른쪽 단추 누르기 대체</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
