--- a/resources/gnome-control-center/a11y-stickykeys.html
+++ b/resources/gnome-control-center/a11y-stickykeys.html
@@ -15,9 +15,9 @@
         <li><img class="img" src="grey.svg">
         <li><a href="a11y#top">접근성</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="a11y#mobility">이동 문제</a>
+        <li><a href="a11y#mobility">이동 지원</a>
         <li><img class="img" src="grey.svg">
-        </li><li><a href="#top">고정 키 켜기</a>
+        </li><li><a href="#top">고정 키 설정</a>
       </ul>
     </nav>
     <!--end of navbar-->
@@ -28,7 +28,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">고정 키 켜기</font><br>
+      <font class="font title" id="title">고정 키 설정</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
